output/DualLangParser.java
// $ANTLR 3.5.1 C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g 2024-01-30 01:34:46

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class DualLangParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "AND", "BOOL", "CMP", "COMMENT", 
		"DO", "ELSE", "END", "ERROR", "ESC_SEQ", "EXPONENT", "FLOAT", "FUNCTION", 
		"HEX_DIGIT", "ID", "IF", "INT", "LOOP", "MUL", "NOT", "OCTAL_ESC", "OR", 
		"RECEIVE", "STRING", "THEN", "TYPE", "UNICODE_ESC", "WHILE", "WS", "'%'", 
		"'('", "')'", "'++'", "','", "'--'", "';'", "'='", "'BREAK'", "'PRINT'", 
		"'^'", "'calculate'", "'device1:'", "'device2:'", "'receive from device1('", 
		"'return'", "'returns'", "'send to device2('", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int ADD=4;
	public static final int AND=5;
	public static final int BOOL=6;
	public static final int CMP=7;
	public static final int COMMENT=8;
	public static final int DO=9;
	public static final int ELSE=10;
	public static final int END=11;
	public static final int ERROR=12;
	public static final int ESC_SEQ=13;
	public static final int EXPONENT=14;
	public static final int FLOAT=15;
	public static final int FUNCTION=16;
	public static final int HEX_DIGIT=17;
	public static final int ID=18;
	public static final int IF=19;
	public static final int INT=20;
	public static final int LOOP=21;
	public static final int MUL=22;
	public static final int NOT=23;
	public static final int OCTAL_ESC=24;
	public static final int OR=25;
	public static final int RECEIVE=26;
	public static final int STRING=27;
	public static final int THEN=28;
	public static final int TYPE=29;
	public static final int UNICODE_ESC=30;
	public static final int WHILE=31;
	public static final int WS=32;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "interaction1", "synpred5_DualLang", "calculation", "forCondition", 
		"loopCondition", "synpred2_DualLang", "loopUpdate", "functionDefinition", 
		"funcExpr", "synpred6_DualLang", "ifStatement", "availableExpr", "loopBody", 
		"device1Statements", "parameterList", "loop", "exprList", "prog", "statement", 
		"synpred1_DualLang", "boolStatement", "synpred3_DualLang", "mathExpr", 
		"whileCondition", "interaction2", "device2Statements", "mathStatement", 
		"printStatement", "functionCall", "statements", "expr", "loopInitialization", 
		"forEndCondition", "synpred7_DualLang", "synpred4_DualLang"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, true, false, 
		    true, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public DualLangParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public DualLangParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public DualLangParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return DualLangParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g"; }



	// $ANTLR start "prog"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:5:1: prog : statements EOF ;
	public final void prog() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "prog");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(5, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:6:5: ( statements EOF )
			dbg.enterAlt(1);

			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:6:7: statements EOF
			{
			dbg.location(6,7);
			pushFollow(FOLLOW_statements_in_prog17);
			statements();
			state._fsp--;
			if (state.failed) return;dbg.location(6,18);
			match(input,EOF,FOLLOW_EOF_in_prog19); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(7, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "prog");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "prog"



	// $ANTLR start "statements"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:9:1: statements : ( statement )* ;
	public final void statements() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "statements");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(9, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:10:5: ( ( statement )* )
			dbg.enterAlt(1);

			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:10:7: ( statement )*
			{
			dbg.location(10,7);
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:10:7: ( statement )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= 45 && LA1_0 <= 46)) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:10:7: statement
					{
					dbg.location(10,7);
					pushFollow(FOLLOW_statement_in_statements36);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(11, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "statements");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:13:1: statement : ( 'device1:' ( device1Statements )* | 'device2:' ( device2Statements )* );
	public final void statement() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "statement");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(13, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:14:2: ( 'device1:' ( device1Statements )* | 'device2:' ( device2Statements )* )
			int alt4=2;
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==45) ) {
				alt4=1;
			}
			else if ( (LA4_0==46) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:14:4: 'device1:' ( device1Statements )*
					{
					dbg.location(14,4);
					match(input,45,FOLLOW_45_in_statement51); if (state.failed) return;dbg.location(14,15);
					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:14:15: ( device1Statements )*
					try { dbg.enterSubRule(2);

					loop2:
					while (true) {
						int alt2=2;
						try { dbg.enterDecision(2, decisionCanBacktrack[2]);

						int LA2_0 = input.LA(1);
						if ( (LA2_0==FUNCTION||(LA2_0 >= ID && LA2_0 <= IF)||LA2_0==LOOP||LA2_0==42||LA2_0==44||LA2_0==50) ) {
							alt2=1;
						}

						} finally {dbg.exitDecision(2);}

						switch (alt2) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:14:15: device1Statements
							{
							dbg.location(14,15);
							pushFollow(FOLLOW_device1Statements_in_statement53);
							device1Statements();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop2;
						}
					}
					} finally {dbg.exitSubRule(2);}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:15:4: 'device2:' ( device2Statements )*
					{
					dbg.location(15,4);
					match(input,46,FOLLOW_46_in_statement59); if (state.failed) return;dbg.location(15,15);
					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:15:15: ( device2Statements )*
					try { dbg.enterSubRule(3);

					loop3:
					while (true) {
						int alt3=2;
						try { dbg.enterDecision(3, decisionCanBacktrack[3]);

						int LA3_0 = input.LA(1);
						if ( (LA3_0==FUNCTION||(LA3_0 >= ID && LA3_0 <= IF)||LA3_0==LOOP||LA3_0==42||LA3_0==44||LA3_0==47) ) {
							alt3=1;
						}

						} finally {dbg.exitDecision(3);}

						switch (alt3) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:15:15: device2Statements
							{
							dbg.location(15,15);
							pushFollow(FOLLOW_device2Statements_in_statement61);
							device2Statements();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop3;
						}
					}
					} finally {dbg.exitSubRule(3);}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(16, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "statement");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "statement"



	// $ANTLR start "device1Statements"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:19:1: device1Statements : ( expr | interaction1 );
	public final void device1Statements() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "device1Statements");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:20:2: ( expr | interaction1 )
			int alt5=2;
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==FUNCTION||(LA5_0 >= ID && LA5_0 <= IF)||LA5_0==LOOP||LA5_0==42||LA5_0==44) ) {
				alt5=1;
			}
			else if ( (LA5_0==50) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:20:4: expr
					{
					dbg.location(20,4);
					pushFollow(FOLLOW_expr_in_device1Statements74);
					expr();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:21:4: interaction1
					{
					dbg.location(21,4);
					pushFollow(FOLLOW_interaction1_in_device1Statements79);
					interaction1();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(22, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "device1Statements");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "device1Statements"



	// $ANTLR start "device2Statements"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:24:1: device2Statements : ( expr | interaction2 );
	public final void device2Statements() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "device2Statements");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(24, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:25:2: ( expr | interaction2 )
			int alt6=2;
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==FUNCTION||(LA6_0 >= ID && LA6_0 <= IF)||LA6_0==LOOP||LA6_0==42||LA6_0==44) ) {
				alt6=1;
			}
			else if ( (LA6_0==47) ) {
				alt6=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:25:4: expr
					{
					dbg.location(25,4);
					pushFollow(FOLLOW_expr_in_device2Statements91);
					expr();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:26:4: interaction2
					{
					dbg.location(26,4);
					pushFollow(FOLLOW_interaction2_in_device2Statements96);
					interaction2();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(27, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "device2Statements");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "device2Statements"



	// $ANTLR start "expr"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:29:1: expr options {backtrack=true; } : ( calculation | ifStatement | loop | printStatement | functionDefinition | functionCall );
	public final void expr() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "expr");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(29, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:30:2: ( calculation | ifStatement | loop | printStatement | functionDefinition | functionCall )
			int alt7=6;
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			switch ( input.LA(1) ) {
			case 44:
				{
				alt7=1;
				}
				break;
			case IF:
				{
				alt7=2;
				}
				break;
			case LOOP:
				{
				alt7=3;
				}
				break;
			case 42:
				{
				alt7=4;
				}
				break;
			case FUNCTION:
				{
				alt7=5;
				}
				break;
			case ID:
				{
				alt7=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:30:4: calculation
					{
					dbg.location(30,4);
					pushFollow(FOLLOW_calculation_in_expr117);
					calculation();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:31:4: ifStatement
					{
					dbg.location(31,4);
					pushFollow(FOLLOW_ifStatement_in_expr122);
					ifStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:32:4: loop
					{
					dbg.location(32,4);
					pushFollow(FOLLOW_loop_in_expr127);
					loop();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:33:4: printStatement
					{
					dbg.location(33,4);
					pushFollow(FOLLOW_printStatement_in_expr132);
					printStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					dbg.enterAlt(5);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:34:4: functionDefinition
					{
					dbg.location(34,4);
					pushFollow(FOLLOW_functionDefinition_in_expr137);
					functionDefinition();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					dbg.enterAlt(6);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:35:4: functionCall
					{
					dbg.location(35,4);
					pushFollow(FOLLOW_functionCall_in_expr142);
					functionCall();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(36, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "expr");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "expr"



	// $ANTLR start "availableExpr"
	// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:39:1: availableExpr options {backtrack=true; } : ( ( device1Statements )* | ( device2Statements )* );
	public final void availableExpr() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "availableExpr");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(39, 0);

		try {
			// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:40:2: ( ( device1Statements )* | ( device2Statements )* )
			int alt10=2;
			try { dbg.enterDecision(10, decisionCanBacktrack[10]);

			switch ( input.LA(1) ) {
			case 44:
				{
				int LA10_1 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case IF:
				{
				int LA10_2 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case LOOP:
				{
				int LA10_3 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case 42:
				{
				int LA10_4 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case FUNCTION:
				{
				int LA10_5 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case ID:
				{
				int LA10_6 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case 50:
				{
				alt10=1;
				}
				break;
			case ELSE:
				{
				int LA10_8 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case END:
				{
				int LA10_9 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case 48:
				{
				int LA10_10 = input.LA(2);
				if ( (synpred6_DualLang()) ) {
					alt10=1;
				}
				else if ( (true) ) {
					alt10=2;
				}

				}
				break;
			case 47:
				{
				alt10=2;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(10);}

			switch (alt10) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:40:4: ( device1Statements )*
					{
					dbg.location(40,4);
					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:40:4: ( device1Statements )*
					try { dbg.enterSubRule(8);

					loop8:
					while (true) {
						int alt8=2;
						try { dbg.enterDecision(8, decisionCanBacktrack[8]);

						int LA8_0 = input.LA(1);
						if ( (LA8_0==FUNCTION||(LA8_0 >= ID && LA8_0 <= IF)||LA8_0==LOOP||LA8_0==42||LA8_0==44||LA8_0==50) ) {
							alt8=1;
						}

						} finally {dbg.exitDecision(8);}

						switch (alt8) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:40:4: device1Statements
							{
							dbg.location(40,4);
							pushFollow(FOLLOW_device1Statements_in_availableExpr162);
							device1Statements();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop8;
						}
					}
					} finally {dbg.exitSubRule(8);}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:41:4: ( device2Statements )*
					{
					dbg.location(41,4);
					// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:41:4: ( device2Statements )*
					try { dbg.enterSubRule(9);

					loop9:
					while (true) {
						int alt9=2;
						try { dbg.enterDecision(9, decisionCanBacktrack[9]);

						int LA9_0 = input.LA(1);
						if ( (LA9_0==FUNCTION||(LA9_0 >= ID && LA9_0 <= IF)||LA9_0==LOOP||LA9_0==42||LA9_0==44||LA9_0==47) ) {
							alt9=1;
						}

						} finally {dbg.exitDecision(9);}

						switch (alt9) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\user\\Desktop\\University\\Sem4021\\Compiler Design\\Antlr\\Basic_Compiler\\DualLang.g:41:4: device2Statements
							{
							dbg.location(41,4);
							pushFollow(FOLLOW_device2Statements_in_availableExpr168);
							device2Statements();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop9;
						}
					}
					} finally {dbg.exitSubRule(9);}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(42, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "availableExpr");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "availableExpr"


